Add updated files

--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
 <body>
 
   <h1 id="title">🏎 Car Sounds 🏎 </h1>
+  <p class="text">   ⚠️ ⚠️ <span class="warning">WARNING</span>: CARS ARE LOUD ⚠️  ⚠️ </p>
+  <p class="text">Click a car and enjoy the sound 😍</p>
   <div class="set">
     <button class="lamborghini car">lamborghini</button>
     <button class="porsche car">porsche</button>
     <button class="ferrari car">ferrari</button>
-    <!-- <button class="d car"></button>
-    <button class="j car"></button>
-    <button class="k car"></button>
-    <button class="l car"></button> -->
   </div>
 
 
