Add class to last p element

--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
     <button class="ferrari car">ferrari</button>
   </div>
 
+  <p class="text">Made by an enthusiast</p>
 
-  <footer>
-    <p>Made by an enthusiast</p>
-  </footer>
   <script src="index.js">
 
   </script>
